fixed spacing again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h4 {
 }
 
 #projectsSection {
-    margin-left: 210px;
+    margin-left: 200px;
 }
 
 li {
